# podcaster

./: .gitignore  README.md  add_categories.py  cli_readme.md  delete_old.py  process_files.py  pyproject.toml  requirements.txt  run.py  set_dates.py  tg_bot.py  web.py  yt_downloader.py
app/: cli.py  converter.py  main.py  models.py  pyproject.toml  services.py
app/routes/: main.py
app/utils/: helpers.py
migrations/models/: 0_20250517124401_init.py  10_20250518230421_update.py  11_20250518233142_update.py  12_20250518233418_update.py  13_20250519005953_update.py  14_20250519012426_update.py  15_20250520132803_update.py  16_20250520133256_add_max_duration_column.py  17_20250520192322_add_banned_words.py  18_20250520211700_add_duration.py  19_20250521012517_add_extract_tags.py  1_20250517191323_podcast_new_columns.py  20_20250606221447_update.py  21_20250606221551_update.py  22_20250619000708_update.py  2_20250517211624_yt_id_column.py  3_20250517212038_update.py  4_20250517215200_update.py  5_20250517215605_update.py  6_20250517221711_update.py  7_20250517225947_update.py  8_20250518130058_update.py  9_20250518224129_update.py
scripts/: daily.sh  dev.sh  download.sh
static/css/: main.css
templates/: base.html  index.html  podcasts.html
templates/categories/: detail.html  list.html  row.html
templates/identifications/: list.html  row.html
templates/podcasts/: activated.html  deactivated.html  list.html  pod-list.html  posted.html  posted_status.html
templates/sources/: list.html  row.html
templates/tg/: list.html  row.html
