
[tool.poetry]
name = "podcast-manager"
version = "0.1.0"
description = "Sanic-based podcast management application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[project]
name = "podcaster"
version = "0.1.0"
description = ""
authors = [
    {name = "webii",email = "webii@pm.me"}
]
license = {text = "WTFPL"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "yt-dlp (>=2025.5.22,<2026.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "tortoise-orm (>=0.25.0,<0.26.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
podcast = "app.cli:cli"
